--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 5.5
 before_script:
   - git clone git://github.com/phalcon/cphalcon.git --depth=1 && cd cphalcon/build/safe && phpize && ./configure --enable-phalcon && sudo make install
-  - phpenv config-add ./tests/phalcon.ini
+  - cd ../../../ && phpenv config-add ./tests/phalcon.ini
   - composer install
   - cd tests
 script: phpunit -v
