--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,14 +1,14 @@
-<phpunit bootstrap="./Bootstrap.php" colors="true">
+<phpunit bootstrap="./tests/Bootstrap.php" colors="true">
     <testsuites>
         <testsuite name="EvaEngine Test Suite">
-            <directory>./EvaEngineTest</directory>
+            <directory>./tests/EvaEngineTest</directory>
         </testsuite>
     </testsuites>
     <filter>
         <whitelist>
-            <directory>../src/</directory>
+            <directory>src/</directory>
             <exclude>
-                <directory>../vendor/</directory>
+                <directory>vendor/</directory>
             </exclude>
         </whitelist>
     </filter>
