--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
   - composer self-update
   - composer install
 script:
-  phpunit -v
+  phpunit -v &
   phpcs --standard=PSR2 --extensions=php --ignore=vendor/*,tests/* ./
