--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_script:
   - cd ../../../ && phpenv config-add ./tests/phalcon.ini
   - composer self-update
   - composer install
+  - pyrus install pear/PHP_CodeSniffer
+  - phpenv rehash
 script:
   phpunit -v &
   phpcs --standard=PSR2 --extensions=php --ignore=vendor/*,tests/* ./
