--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php": ">=5.3.10",
-	"ext-phalcon": ">=1.3.2",
-        "phalcon/incubator" : "dev-master",
-	"swiftmailer/swiftmailer" : "dev-master",
-	"knplabs/gaufrette" : "dev-master"
+        "ext-phalcon": ">=1.3.2",
+        "phalcon/incubator" : "v1.2.5",
+        "swiftmailer/swiftmailer" : "v5.3.0",
+        "knplabs/gaufrette" : "v0.1.8"
     },
     "autoload": {
         "psr-4": {"Eva\\EvaEngine\\": "src/EvaEngine"}
