--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.3.10",
         "ext-phalcon": ">=1.3.2",
-        "phalcon/incubator" : "v1.2.5",
+        "phalcon/incubator" : "1.3.0.x-dev",
         "swiftmailer/swiftmailer" : "v5.3.0",
         "knplabs/gaufrette" : "v0.1.8"
     },
