--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,20 @@
     "require": {
         "php": ">=5.3.10",
         "ext-phalcon": ">=1.3.2",
-        "phalcon/incubator" : "1.3.0.x-dev",
+        "phalcon/incubator" : "v1.3.0",
         "swiftmailer/swiftmailer" : "v5.3.0",
         "knplabs/gaufrette" : "v0.1.8"
     },
+    "suggest": {
+        "ext-redis": "*",
+        "ext-gearman": "*"
+    },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/EvaEngine/incubator.git"
+        }
+    ],
     "autoload": {
         "psr-4": {"Eva\\EvaEngine\\": "src/EvaEngine"}
     }
