--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,7 @@
 <phpunit bootstrap="./tests/Bootstrap.php" colors="true">
     <testsuites>
         <testsuite name="EvaEngine Test Suite">
-<directory>./tests/EvaEngineTest/Interceptor</directory>
+            <directory>./tests</directory>
         </testsuite>
     </testsuites>
     <filter>
