--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.4
   - 5.5
 before_script:
-  - git clone git://github.com/phalcon/cphalcon.git --depth=1 && cd cphalcon/build/safe && phpize && ./configure --enable-phalcon && sudo make install
+  - git clone git://github.com/phalcon/cphalcon.git --depth=1 && git checkout 1.3.4 && cd cphalcon/build/safe && phpize && ./configure --enable-phalcon && sudo make install
   - cd ../../../ && phpenv config-add ./tests/phalcon.ini
   - composer self-update
   - composer install
