--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ php:
   - 5.4
   - 5.5
 before_script:
-  - git clone git://github.com/phalcon/cphalcon.git --depth=1 && git checkout 1.3.4 && cd cphalcon/build/safe && phpize && ./configure --enable-phalcon && sudo make install
-  - cd ../../../ && phpenv config-add ./tests/phalcon.ini
+  - git clone git://github.com/phalcon/cphalcon.git --depth=1 && cd cphalcon && git checkout 1.3.4 && cd build && sudo ./install
+  - cd ../../ && phpenv config-add ./tests/phalcon.ini
   - composer self-update
   - composer install
   - pyrus install pear/PHP_CodeSniffer
