--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,24 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
+
 before_script:
-  - git clone git://github.com/phalcon/cphalcon.git --depth=1 && cd cphalcon && git checkout 1.3.4 && cd build && sudo ./install
+  - git clone -b 1.3.4 git://github.com/phalcon/cphalcon.git --depth=1 && cd cphalcon/build && sudo ./install
   - cd ../../ && phpenv config-add ./tests/phalcon.ini
   - composer self-update
-  - composer install
+  - composer install --dev --prefer-source
   - pyrus install pear/PHP_CodeSniffer
   - phpenv rehash
+
 script:
   phpunit -v &
   phpcs --standard=PSR2 --extensions=php --ignore=vendor/*,tests/*,cphalcon/* --warning-severity=0 ./
+
+after_script:
+  - php vendor/bin/coveralls
+
+matrix:
+  allow_failures:
+    - php: hhvm
