--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "swiftmailer/swiftmailer" : "v5.3.0",
         "knplabs/gaufrette" : "v0.1.8"
     },
+    "require-dev": {
+        "satooshi/php-coveralls": "dev-master"
+    },
     "suggest": {
         "ext-redis": "*",
         "ext-gearman": "*"
