--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "ext-phalcon": ">=1.3.2",
         "phalcon/incubator" : "v1.3.0",
         "swiftmailer/swiftmailer" : "v5.3.0",
-        "knplabs/gaufrette" : "v0.1.8"
+        "knplabs/gaufrette" : "v0.1.8",
+        "evaengine/eva-sms" : "0.1.*"
     },
     "require-dev": {
         "satooshi/php-coveralls": "dev-master"
