--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   ],
   "require": {
-    "php": ">=5.3.10",
-    "ext-phalcon": ">=1.3.2",
-    "phalcon/incubator": "~1.3",
-    "swiftmailer/swiftmailer": "v5.3.0",
-    "knplabs/gaufrette": "v0.1.8",
-    "evaengine/eva-sms": "0.1.*"
+    "php": ">=5.5",
+    "ext-phalcon": "~2.0",
+    "phalcon/incubator": "~2.0",
+    "swiftmailer/swiftmailer": "~5.3",
+    "knplabs/gaufrette": "~0.1",
+    "evaengine/eva-sms": "~0.1"
   },
   "require-dev": {
     "satooshi/php-coveralls": "dev-master"
@@ -24,12 +24,6 @@
     "ext-redis": "*",
     "ext-gearman": "*"
   },
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/EvaEngine/incubator.git"
-    }
-  ],
   "autoload": {
     "psr-4": {"Eva\\EvaEngine\\": "src/EvaEngine"},
     "files": ["src/EvaEngine/helpers.php"]
