--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "knplabs/gaufrette": "~0.1",
     "symfony/console": "2.7.*",
     "symfony/filesystem": "2.7.*",
+    "symfony/finder": "2.7.*",
     "evaengine/eva-sms": "~0.1"
   },
   "require-dev": {
