--- a/templates/module/composer.json
+++ b/templates/module/composer.json
@@ -15,6 +15,6 @@
     },
     "autoload": {
         "classmap": ["Module.php"],
-        "psr-4": {"<?=$moduleNamespace?>": "src/<?=$moduleName?>"}
+        "psr-4": {"<?=str_replace('\\', '\\\\', $moduleNamespace)?>": "src/<?=$moduleName?>"}
     }
 }
