--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,14 @@
     "phalcon/incubator": "~1.3",
     "swiftmailer/swiftmailer": "v5.3.0",
     "knplabs/gaufrette": "v0.1.8",
-    "evaengine/eva-sms": "0.1.*"
+    "evaengine/eva-sms": "0.1.*",
+    "symfony/console": "^2.6",
+    "phpdocumentor/reflection-docblock": "^2.0",
+    "doctrine/annotations": "^1.2"
   },
   "require-dev": {
-    "satooshi/php-coveralls": "dev-master"
+    "satooshi/php-coveralls": "dev-master",
+    "mockery/mockery": "^0.9.4"
   },
   "suggest": {
     "ext-redis": "*",
