--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "symfony/console": "2.7.*",
     "symfony/filesystem": "2.7.*",
     "symfony/finder": "2.7.*",
+    "nikic/php-parser": "1.4.0",
     "evaengine/eva-sms": "~0.1"
   },
   "require-dev": {
