--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "php": ">=5.5",
     "ext-phalcon": ">=2.0.6",
+    "psr/http-message": "~1.0",
     "phalcon/incubator": "~2.0",
     "swiftmailer/swiftmailer": "~5.3",
     "knplabs/gaufrette": "~0.1",
