--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,21 @@
   ],
   "require": {
     "php": ">=5.5",
-    "ext-phalcon": ">=2.0.6",
+    "ext-phalcon": ">=2.0.8",
     "psr/http-message": "~1.0",
-    "phalcon/incubator": "~2.0",
     "swiftmailer/swiftmailer": "~5.3",
     "knplabs/gaufrette": "~0.1",
     "symfony/console": "2.7.*",
     "symfony/filesystem": "2.7.*",
     "symfony/finder": "2.7.*",
     "symfony/process": "2.7.*",
-    "nikic/php-parser": "1.4.0",
+    "nikic/php-parser": "1.4.*",
     "evaengine/eva-sms": "~0.1"
   },
   "require-dev": {
-    "mockery/mockery": "dev-master",
-    "satooshi/php-coveralls": "dev-master"
+    "phpunit/phpunit": "5.0.*",
+    "mockery/mockery": "0.9.*",
+    "satooshi/php-coveralls": "0.6.*"
   },
   "bin": [
     "engine"
