--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
     "php": ">=5.5",
     "ext-phalcon": ">=2.0.8",
     "psr/http-message": "~1.0",
-    "swiftmailer/swiftmailer": "~5.3",
+    "swiftmailer/swiftmailer": "~5.4",
     "knplabs/gaufrette": "~0.1",
     "symfony/console": "2.7.*",
     "symfony/filesystem": "2.7.*",
     "symfony/finder": "2.7.*",
     "symfony/process": "2.7.*",
     "nikic/php-parser": "1.4.*",
+    "zircote/swagger-php": "2.0.*",
     "evaengine/eva-sms": "0.2.*"
   },
   "require-dev": {
