--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 language: php
+
 php:
   - 5.5
   - 5.6
-  - 7.0
-
-matrix:
-  fast_finish: true
-  allow_failures:
-    - php: 7.0
 
 before_script:
-  - git clone -b 2.0.x git://github.com/phalcon/cphalcon.git --depth=1 && cd cphalcon/build/safe && phpize && ./configure --enable-phalcon && sudo make install
+  - git clone -b phalcon-v2.0.8 git://github.com/phalcon/cphalcon.git --depth=1 && cd cphalcon/build/ && ./install
   - cd ../../../ && phpenv config-add ./tests/phalcon.ini
   - composer self-update
   - composer install --dev --prefer-source
