--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
+    "squizlabs/php_codesniffer": "2.5.*",
     "satooshi/php-coveralls": "0.6.*"
   },
   "bin": [
