--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "phalcon/incubator": "~1.3",
     "swiftmailer/swiftmailer": "v5.3.0",
     "knplabs/gaufrette": "v0.1.8",
-    "evaengine/eva-sms": "0.1.*"
+    "wallstreetcn/eva-sms": "0.1.*"
   },
   "require-dev": {
     "satooshi/php-coveralls": "dev-master"
@@ -28,6 +28,10 @@
     {
       "type": "git",
       "url": "https://github.com/EvaEngine/incubator.git"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/wallstreetcn/EvaSms.git"
     }
   ],
   "autoload": {
