--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "evaengine/evaengine",
+  "name": "wallstreetcn/evaengine",
   "description": "A development engine based on Phalcon Framework",
   "license": "BSD-3-Clause",
   "authors": [
