--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "evaengine/eva-sms": "0.1.*"
   },
   "require-dev": {
-    "satooshi/php-coveralls": "dev-master"
+    "satooshi/php-coveralls": "dev-master",
+    "phpunit/phpunit": "5.5.*"
   },
   "suggest": {
     "ext-redis": "*",
