--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ before_script:
   - composer self-update
   - composer install --dev --prefer-source
   - wget http://pear2.php.net/pyrus.phar
-  - php pyrus.phar
-  - pyrus install pear/PHP_CodeSniffer
+  - php pyrus.phar install pear/PHP_CodeSniffer
   - phpenv rehash
 
 script:
