--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - cd ../../../ && phpenv config-add ./tests/phalcon.ini
   - composer self-update
   - composer install --dev --prefer-source
-  - sudo pear install --alldeps php_codesniffer
+  - pear install --alldeps php_codesniffer
   - phpenv rehash
 
 script:
