--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - cd ../../../ && phpenv config-add ./tests/phalcon.ini
   - composer self-update
   - composer install --dev --prefer-source
+  - pear config-set php_bin /usr/bin/php
   - pear install --alldeps php_codesniffer
   - phpenv rehash
 
